<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutPerfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    android:padding="16dp">

    <!-- Título da tela (Perfil) -->
    <TextView
        android:id="@+id/tvTituloPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="25sp"
        android:textColor="@color/app_blue"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <!-- Imagem de usuário -->
        <ImageView
            android:id="@+id/ivIconUsuario"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/image_background"
            android:clipToOutline="true"
            android:contentDescription="@string/profile_user_image"
            android:scaleType="fitXY"
            android:src="@drawable/ic_person" />

        <!-- Bloco de textos ao lado da imagem -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <!-- Nickname (principal) -->
            <TextView
                android:id="@+id/tvNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_nickname"
                android:textColor="@color/app_blue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPrimeiroNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_firstname"
                    android:textSize="11sp"
                    android:textColor="@color/app_blue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSegundoNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_lastname"
                    android:textSize="11sp"
                    android:textColor="@color/app_blue"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <!-- E-mail -->
            <TextView
                android:id="@+id/tvEmailUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_email"
                android:textSize="11sp"
                android:textColor="@color/app_blue"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <!-- Botão "Minhas Receitas" -->
    <Button
        android:id="@+id/btnMinhasReceitas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_botton"
        android:text="@string/profile_recipes"
        android:layout_marginBottom="8dp" />

    <!-- Card/Container com a Receita (Exemplo) -->


    <!-- Botão "Favoritos" -->
    <Button
        android:id="@+id/btnFavoritos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_botton"
        android:text="@string/profile_favorites"
        android:layout_marginBottom="8dp" />


        <!-- Espaço para empurrar o botão para o final da tela -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <!-- Botão "Log Out" fixado na parte inferior, centralizado -->
        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button_botton"
            android:text="@string/log_out"
            android:layout_gravity="center_horizontal"/>





</LinearLayout>
