<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/background_gradient"
    tools:context=".ui.view.AddRecipeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_back"
            app:tint="@color/white"
            android:contentDescription="@string/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/register_recipe"
            android:textColor="@color/app_blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/image_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/line_white"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"/>

    <!-- Ícone de imagem -->
    <ImageView
        android:id="@+id/imageDish"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_add"
        android:scaleType="centerCrop"
        android:background="@drawable/rounded_button"
        android:clickable="true"
        android:focusable="true"
        app:tint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_recipe" />

    <!-- Campo Nome -->
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ex_name"
        android:inputType="textCapSentences"
        android:autofillHints="text"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toEndOf="@+id/imageDish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageDish" />

    <!-- Campo Descrição -->
    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:inputType="textCapSentences"
        android:autofillHints="text"
        android:layout_height="wrap_content"
        android:hint="@string/ex_description"
        android:background="@drawable/edittext_background"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDish"
        android:layout_marginTop="16dp"/>

    <!-- Ingrediente 1 -->
    <EditText
        android:id="@+id/editTextIngredient1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:hint="@string/ex_Ingredient"
        android:inputType="textCapSentences"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextQuantity1"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        android:layout_marginTop="16dp"/>

    <!-- Quantidade -->
    <EditText
        android:id="@+id/editTextQuantity1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:autofillHints="text"
        android:hint="@string/ex_Quantity"
        android:background="@drawable/edittext_background"
        android:maxLines="1"
        android:padding="10dp"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        android:layout_marginTop="16dp"/>

    <!-- Botão Adicionar Ingrediente -->
    <Button
        android:id="@+id/buttonAddIngredient"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/add_ingredient"
        android:background="@drawable/rounded_button_botton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIngredient1"
        android:layout_marginTop="16dp"/>

    <!-- Campo Modo de Preparo -->
    <EditText
        android:id="@+id/editTextPreparation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:autofillHints="text"
        android:hint="@string/ex_Method"
        android:background="@drawable/edittext_background"
        android:padding="15dp"
        android:maxLines="5"
        android:ellipsize="end"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddIngredient"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/spinnerFoodType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:prompt="@string/select_food_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPreparation"
        android:layout_marginTop="16dp"/>


    <!-- Campo Calorias Totais (apenas números) -->
    <EditText
        android:id="@+id/etCalories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ex_Calories"
        android:autofillHints="number"
        android:inputType="number"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFoodType"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_button_botton"
        android:text="@string/button_register"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
