<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    tools:context=".ui.view.fragments.SecondarySearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher"
            android:background="@drawable/circle_border"
            android:contentDescription="@string/content_description_main"
            android:layout_marginEnd="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="@drawable/edittext_background">
            <EditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="text"
                android:hint="@string/search_recipe"
                android:imeOptions="actionSearch"
                android:inputType="textCapSentences" />

            <ImageButton
                android:id="@+id/btnSearch"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@android:drawable/ic_menu_search"
                android:contentDescription="@string/content_description_search"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <!-- Botão para aplicar filtros -->
    <Button
        android:id="@+id/btnFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button_botton"
        android:text="@string/filters" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/type_recipe_line" />

</LinearLayout>



